admin template ingration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-#spring.mvc.view.prefix= /templates
-#spring.mvc.view.suffix= .jsp
-#spring.mvc.static-path-pattern= /resources/**
-#
-#
-#server.port=8000
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+jsf.primefaces.FONT_AWESOME=true
+login.level = DEBUG
