--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>com.project2cs.demo.BootstrapApp</start-class>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -45,6 +47,17 @@
 			<version>2.0.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 		<!--Webjars-->
 		<dependency>
@@ -76,6 +89,11 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator</artifactId>
 			<version>0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>animate.css</artifactId>
+			<version>3.5.2</version>
 		</dependency>
 	</dependencies>
 
