initiation with psql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 jsf.primefaces.FONT_AWESOME=true
-login.level = DEBUG
+login.level.org.springframework.web  = DEBUG
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost/testdb
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=true
