role operation add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ login.level.org.springframework.web  = DEBUG
 
 spring.datasource.url=jdbc:postgresql://localhost/testdb
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=
 spring.jpa.generate-ddl=true
