reglement function add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ login.level.org.springframework.web  = DEBUG
 
 
 spring.datasource.url=jdbc:postgresql://localhost/testdb
-spring.datasource.username=postgres
+spring.datasource.username=issam
 spring.datasource.password=
 spring.jpa.generate-ddl=true
