--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 			<version>1.2</version>
 		</dependency>
 
+
 		<!--Thymeleaf-->
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
@@ -77,6 +78,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<!--Webjars-->
