--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,12 @@ spring.jpa.generate-ddl=true
 
 
 
-
-## MULTIPART (MultipartProperties)
-# Enable multipart uploads
 spring.servlet.multipart.enabled=true
-# Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
 
 spring.security.user.name=admin
 spring.security.user.password=secret
