login function add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,7 @@ spring.datasource.username=issam
 spring.datasource.password=
 spring.jpa.generate-ddl=true
 
-
-
+server.port=5656
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
