--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
-src/main/resources/static/uploads/uploads/
+src/main/resources/static/uploads/
+uploads/
 
 ### VS Code ###
 .vscode/
